@@ -40,7 +40,7 @@ class LFSTK_lineEditClass  : public  LFSTK_gadgetClass
 		void					LFSTK_clearWindow(void);
 		void					LFSTK_resizeWindow(int w,int h);
 
-		std::string	LFSTK_getBuffer(void);
+		std::string			LFSTK_getBuffer(void);
 		void					LFSTK_setBuffer(const char *str);
 		const char			*LFSTK_getCStr(void);
 
