@@ -1,4 +1,6 @@
 0.2.0
+Updated appearance dialog.
+Added dock prefs dialog.
 Updated prefs apps.
 Updated lfscolourchooser to include alpha component.
 Updated lfstkprefs.
